<resources>

    <string name="app_name">Remind me</string>
    <string name="Remind_me">Remind_me</string>
    <string name="facebook_app_id">861440641315611</string>
    <string name="fb_login_protocol_scheme">fb861440641315611</string>

    <string name="TripName">TripName</string>
    <string name="Place">Place</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="AddTrip">Add Trip</string>
    <string name="trip_notes">Trip notes</string>
    <string name="on_going">On Going</string>
    <string name="history">History</string>
    <string name="options">Options</string>
    <string name="Language">Language</string>
    <string name="Logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--for the menu drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="edit_menu">Edit Menu</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="resetapasswordHint">Enter your email</string>
    <string name="BackFromResetPassword">Back</string>
    <string name="send">send</string>
    <string name="forgetPassword"><u>Forget Password?</u></string>
    <string name="creatAccount"><u>Create Account.</u></string>
    <string name="signin">Sign in</string>
    <string name="Sync" />
    <string name="sync">Sync</string>
    <string name="signUp">Sign Up</string>
    <string name="Createyouraccount">Create your account</string>
    <string name="UserNameHint">User Name</string>
    <string name="Email">Email Address</string>
    <string name="password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="have_account">Have account?<font color="#1976d2"><u>Sign In</u></font> </string>
    <string name="round">Round</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="startTrip">Start Trip</string>
    <string name="reminder">Reminder</string>
    <string name="cancelTrip">Cancel</string>
    <string name="snooze">Snooze</string>
    <string name="startTripNow">Do you want to start your trip now?</string>
    <string name="sureLogout">Are you sure you want to log out?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="deleteEntry">Delete record</string>
    <string name="sureDeleteEntry">Are you sure you want to delete this record?</string>
    <string name="myNotes">My Notes</string>
    <string name="ok">Ok</string>
    <string name="deleteTrip">Delete Trip</string>
    <string name="sureDeleteTrip">Are you sure you want to delete this trip?</string>
    <string name="sureCancelTrip">Are you sure you want to cancel this trip?</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_time">Time:</string>
    <string name="start_point">start point</string>
    <string name="end_point">end point</string>
    <string name="status">status</string>
    <string name="startb">Start</string>
    <string name="my_notes">My Notes</string>


    <string-array name="spinner">
        <item>Edit Trip</item>
        <item>Cancel</item>
        <item>Delete</item>
    </string-array>

</resources>