<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".Login_form">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".Login_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

    </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="17"
          android:orientation="horizontal"
          android:weightSum="15">

          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:orientation="horizontal"></LinearLayout>

          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="11"
              android:orientation="vertical"
              android:weightSum="15">

              <ImageView
                  android:id="@+id/imageView2"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="3"
                  app:srcCompat="@drawable/notification_icone"
                  tools:srcCompat="@drawable/notification_icone" />

              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1" />

              <EditText
                  android:id="@+id/EmailTxt"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:backgroundTint="@color/teal_200"
                  android:ems="10"
                  android:hint="E-mail Address "
                  android:inputType="textEmailAddress"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="20dp" />

              <EditText
                  android:id="@+id/PasswordTxt"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:backgroundTint="@color/teal_200"
                  android:ems="10"
                  android:hint="Password"
                  android:inputType="textPassword"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="20dp" />

              <ProgressBar
                  android:id="@+id/progressBar"
                  style="?android:attr/progressBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="21dp"
                  android:layout_weight="1"
                  android:visibility="invisible" />

              <Button
                  android:id="@+id/LoginButton"
                  android:layout_width="match_parent"
                  android:layout_height="20dp"
                  android:layout_marginBottom="0dp"
                  android:layout_weight="1"
                  android:background="@color/teal_200"
                  android:text="@string/signin"
                  android:textAllCaps="false" />

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="horizontal"
                  android:weightSum="2">

                  <Button
                      android:id="@+id/forgetPassword"
                      android:layout_width="wrap_content"
                      android:layout_height="36dp"
                      android:layout_weight="1"
                      android:background="@android:color/transparent"
                      android:text="@string/forgetPassword"
                      android:textAlignment="viewStart"
                      android:textAllCaps="false"
                      android:textColor="@color/quantum_vanillablue700"
                      android:textSize="10sp" />

                  <Button
                      android:id="@+id/RegisterationButton"
                      android:layout_width="wrap_content"
                      android:layout_height="28dp"
                      android:layout_weight="1"
                      android:background="@android:color/transparent"
                      android:gravity="top|end"
                      android:paddingLeft="0dp"
                      android:paddingTop="0dp"
                      android:paddingEnd="0dp"
                      android:paddingRight="0dp"
                      android:text="@string/creatAccount"
                      android:textAlignment="viewEnd"
                      android:textAllCaps="false"
                      android:textColor="@color/quantum_vanillablue700"
                      android:textSize="10sp" />
              </LinearLayout>

              <TextView
                  android:layout_width="48dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:fontFamily="sans-serif-medium"
                  android:text="OR"
                  android:textAlignment="center"
                  android:textColor="@color/quantum_vanillared900"
                  android:textSize="20dp" />

              <com.google.android.gms.common.SignInButton
                  android:id="@+id/googleBtn"
                  android:layout_width="match_parent"
                  android:layout_height="35dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="10dp"
                  android:layout_marginEnd="30dp"
                  android:layout_marginBottom="15dp"
                  android:layout_weight="1" />

              <com.facebook.login.widget.LoginButton
                  android:id="@+id/login_button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="10dp"
                  android:layout_marginEnd="30dp"
                  android:layout_marginBottom="15dp"
                  android:layout_weight="1" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:orientation="horizontal"></LinearLayout>
      </LinearLayout>

</LinearLayout>

</ScrollView>





